--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
   <div class="card supervisior">
     <h3>Supervisor</h3>
     <p>Monitors activity to identify project roadblocks</p>
-    <img src="/images/icon-supervisor.svg" alt="">
+    <img src="images/icon-supervisor.svg" alt="">
   </div>
   
   <div class="card team">
     <h3>Team Builder</h3>
     <p>Scans our talent network to create the optimal team for your project</p>
-    <img src="/images/icon-team-builder.svg" alt="">
+    <img src="images/icon-team-builder.svg" alt="">
   </div>
     
   <div class="card calculator">
     <h3>Calculator</h3>
     <p>Uses data from past projects to provide better delivery estimates</p>
-    <img src="/images/icon-calculator.svg" alt="">
+    <img src="images/icon-calculator.svg" alt="">
   </div>
 
   <div class="card karma">
     <h3>Karma</h3>
     <p>Regularly evaluates our talent to ensure quality</p>
-    <img src="/images/icon-karma.svg" alt="">
+    <img src="images/icon-karma.svg" alt="">
   </div>
 
 </div>
